Se hizo la logica para que no se pueda acceder a otras paginas sin haber realizado el inicio de sesion y se agrego el boton se cerrar sesion

--- a/Vista/Estilos/PersonalizarPresupuesto.css
+++ b/Vista/Estilos/PersonalizarPresupuesto.css
@@ -110,6 +110,16 @@ h1{
     font-weight: bold;
 }
 
+#logoutButton img {
+    width: 24px; /* Ajusta el tamaño según sea necesario */
+    height: auto; /* Mantiene la relación de aspecto */
+}
+
+#logoutButton {
+    border: none; /* Elimina el borde del botón */
+    background: transparent; /* Hace que el botón sea transparente */
+    padding: 0; /* Elimina el relleno */
+}
 
 .scale-up-center:hover{animation:scale-up-center forwards; }
 @keyframes scale-up-center{ 0%{transform:scale(1)} 100%{transform:scale(1.2)} }
