Se agrego los cambios que se habian realizado en la rama de felipe

--- a/Vista/Estilos/Administrador.css
+++ b/Vista/Estilos/Administrador.css
@@ -143,3 +143,14 @@ body {
     background-color: #333;
     transition: background-color 0.3s;
 }
+
+#logoutButton img {
+    width: 24px; /* Ajusta el tamaño según sea necesario */
+    height: auto; /* Mantiene la relación de aspecto */
+}
+
+#logoutButton {
+    border: none; /* Elimina el borde del botón */
+    background: transparent; /* Hace que el botón sea transparente */
+    padding: 0; /* Elimina el relleno */
+}
