--- a/Vista/Estilos/Seguimiento.css
+++ b/Vista/Estilos/Seguimiento.css
@@ -162,4 +162,14 @@ header.menu {
     overflow-x: auto;
     margin-bottom: 20px;
 }
+#logoutButton img {
+    width: 24px; /* Ajusta el tamaño según sea necesario */
+    height: auto; /* Mantiene la relación de aspecto */
+}
+
+#logoutButton {
+    border: none; /* Elimina el borde del botón */
+    background: transparent; /* Hace que el botón sea transparente */
+    padding: 0; /* Elimina el relleno */
+}
 
