--- a/Vista/Estilos/PersonalizarPresupuesto.css
+++ b/Vista/Estilos/PersonalizarPresupuesto.css
@@ -14,6 +14,21 @@ body{
     display: flex;
     justify-content: space-around;
 }
+.titulo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: -120px;
+}
+
+.explicacion {
+    max-width: 600px;
+    margin-top: 10px;
+    font-size: 16px;
+    color: #555;
+}
+
 
 .logo_blanco_container{
     width: 100px;
@@ -46,11 +61,6 @@ body{
     display: block;
     margin-right: 30px;
     font-size: 13px;
-}
-.titulo{
-    display: flex;
-    width: 100%;
-    position: relative;
 }
 
 h1{
